; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/blacklist/port/extr_pidfile.c_pidfile_cleanup.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/blacklist/port/extr_pidfile.c_pidfile_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pidfile_path = common dso_local global i32* null, align 8
@pidfile_pid = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pidfile_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pidfile_cleanup() #0 {
  %1 = load i32*, i32** @pidfile_path, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %10

3:                                                ; preds = %0
  %4 = load i64, i64* @pidfile_pid, align 8
  %5 = call i64 (...) @getpid()
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %3
  %8 = load i32*, i32** @pidfile_path, align 8
  %9 = call i32 @unlink(i32* %8)
  br label %10

10:                                               ; preds = %7, %3, %0
  ret void
}

declare dso_local i64 @getpid(...) #1

declare dso_local i32 @unlink(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
